<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">掌泊寶</string>
    <string name="company_name">澳門博軟科技有限公司</string>
    <string name="company_english_name">Macao Bo Soft Technology Co., Ltd.</string>
    <string name="not_open">該入口暫未開放，敬請期待！</string>
    <string name="mine_wallet">錢包</string>
    <string name="mine_discount">優惠券</string>
    <string name="mine_integral">積分</string>
    <string name="mine_car">我的車輛</string>
    <string name="mine_order_history">歷史訂單</string>
    <string name="mine_recommend">推薦有獎</string>
    <string name="mine_opinion">意見反饋</string>
    <string name="mine_server">服務中心</string>
    <string name="mine_evaluate">歡迎評價</string>
    <string name="mine_guojianglong">違章查詢</string>
    <string name="setting_clean_cache">清除圖片緩存</string>
    <string name="setting_image_quality">非WIFI下的圖片質量</string>
    <string name="setting_notifacation">開啟導航欄通知</string>
    <string name="setting_about">關於我們</string>
    <string name="version_update">版本更新</string>
    <string name="setting_login_out">退出登錄</string>
    <string name="personal_head_portrait">頭像</string>
    <string name="personal_phone">電話</string>
    <string name="personal_username">用戶名</string>
    <string name="personal_pw">登錄密碼</string>
    <string name="personal_pay_pw">支付密碼</string>
    <string name="personal_account">賬戶綁定</string>
    <string name="personal_safe">安全設置</string>
    <string name="wallet_translation_detial">交易明細</string>
    <string name="about_manifesto">便捷生活 無憂停車</string>
    <string name="opinion">請輸入您的寶貴意見</string>
    <string name="username">賬戶名</string>
    <string name="pw">密碼</string>
    <string name="timeout">超時，請重試！~</string>
    <string name="no_net">請求錯誤，請重試！~</string>
    <string name="login_tips">溫馨提示：未註冊用戶可以直接點擊去逛逛或者選擇手機號碼註冊，只需要獲取驗證碼就可以快速註冊哦~</string>
    <string name="register_tips">註冊即表示同意掌泊寶註冊協議</string>
    <string name="login_btn">登錄</string>
    <string name="register_btn">註冊</string>
    <string name="up_not_null">賬戶名密碼不可以為空哦~</string>
    <string name="register_not_null">賬戶名密碼及驗證碼不可以為空哦~</string>
    <string name="login_success">登錄成功！~</string>
    <string name="login_fail">登錄失敗0.0確認您的賬戶密碼是否正確！</string>
    <string name="register_un">賬戶名/手機號碼</string>
    <string name="get_verification_code">獲取驗證碼</string>
    <string name="get_verification_code_fail">獲取驗證碼失敗！請重試</string>
    <string name="visit_first">先逛逛~</string>
    <string name="forget_pw">忘記密碼~</string>
    <string name="not_login">您還未登錄，現在是遊客身份，請登錄先!(｡･_･)!</string>
    <string name="check_user_fail">身份認證失敗！請重新登錄或聯繫客服</string>
    <string name="search_noresult">搵唔到咪錶？唔怕！影相都可以泊車~~</string>
    <string name="get_data_error">獲取數據失敗，點我重試~</string>
    <string name="loading_str">正在加載......</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付結果：%s</string>
    <string name="warm_prompt">請完成拍照、地址及咪錶號碼填寫，方便工作人員尋找,謝謝！</string>
    <string name="payment_agreement">一、總則
《掌泊寶充值服務協定》（以下簡稱“本協議”）是博軟科技有限公司（以下簡稱“博軟”）與博軟會員（以下簡稱“會員”或“您”）就充值服務的使用等相關事項在澳門特別行政區所訂立的有效合約。會員在開啟此功能之前，均應仔細閱讀本協議，會員通過網路頁面點擊確認或以其他方式選擇接受本協定，即表示會員同意接受本協定的全部內容。
如果您對本協議的條款有疑問的，請通過博軟客服管道進行詢問，博軟將向您解釋條款內容。如果您不同意本協定的任意內容，或者無法準確理解博軟對條款的解釋，請不要進行後續操作。
二、您承諾自己在使用博軟提供的本項服務時，實施的所有行為均遵守國家法律、法規和博軟的相關規定以及社會公共利益或公共道德。您利用本服務從事違法活動或不正當交易產生的一切後果與責任，由您獨立承擔。
三、開通本服務後，博軟根據您設置的資訊，將您的博軟帳戶關聯您開通本服務的銀行借記卡及支付寶、微信，資金充值到支付帳戶餘額後，如您需轉出到銀行帳戶或其他帳戶，博軟將按照公佈的收費規則向您收取手續費。
四、您保證您在使用本產品過程中提供的資料真實、準確、完整、有效。對於因您提供資訊不真實或不完整所造成的損失由您自行承擔。您必須正確填寫相關頁面資訊，並且妥善保管預留資訊，除在博軟辦理業務時使用外，不要向任何其他人、其他網站、電話或短信的問詢提供預留的資訊內容；您對通過以上資訊完成的充值行為負責。 同時您須確保通過您在使用充值服務中，不違背借記卡髮卡行及您在博軟“快捷支付”（不含卡通）中綁定的借記卡的髮卡行的相關業務條款，且該銀行卡及支付寶和微信均應為您本人所有，否則因此導致的責任均由您自行承擔。
五、基於您選擇設置充值服務，您知曉並同意：
1、博軟已事先告知您本服務指定的銀行備付金帳戶及支付寶賬戶和微信賬戶資訊，用於您打款，因您打款錯誤等原因導致博軟備付金帳戶未收到您的資金的，由您自行負責。
您理解並同意，基於銀行帳戶、支付寶、微信，的資金轉入及轉出受到銀行、支付寶、微信方面規則和系統的限制，包括但不限於額度、通知時間，因銀行及支付寶、微信等原因導致博軟不能提供本服務或服務未達到您預期的，博軟不承擔責任，但博軟應積極協調銀行解決問題。
您理解並同意，博軟僅提供資金服務，不參與您與協力廠商之間的合同或其他法律關係，您協力廠商之間的糾紛與爭議，博軟不介入處理。
5、如因博軟服務問題給您造成損失的，博軟僅承擔您的直接損失，該直接損失不包括您向協力廠商賠償而產生的損失。
六、您在使用本服務的過程中，應確保您銀行帳戶銀行借記卡及支付寶、微信有足額的款項用於充值，如因您的銀行帳戶、支付寶賬戶、微信賬戶資金不足，導致充值失敗及其他損失，須由您自行承擔。
七 、您鬚根據相關服務頁面提示的使用規則設置相關充值內容並履行相關約定，因您未遵循本協定及相關頁面附屬規則或未盡到合理義務導致充值失敗的，博軟不承擔任何責任。
八、博軟有權根據自身業務的發展，增加、減少或撤銷相關服務專案，甚至終止本服務的提供，調整款項充值的內容及方式或者對本產品功能進行升級、維護和改造的權利。博軟亦有權隨時調整本產品的手續費用，具體以屆時頁面提示的收費規則及計算方式為准。如您不接受上述變更的，您應立即停止使用本服務並終止本協定。一旦您繼續使用本服務的，即視為您同意接受相應的變更或調整。
九、您同意，博軟有權基於為更好的向您提供服務之目的或向您推廣其他產品/服務的需要，保留並使用您在使用本產品過程中產生的相關資料資訊，包括但不限於向其他協力廠商提供該等資訊。
十、您同意，本協議適用澳門特別行政區法律。因博軟與您就本協議的簽訂、履行或解釋發生爭議，雙方應努力友好協商解決。如協商不成，博軟和會員同意由被告所在地法院審理雙方的糾紛或爭議。
十一、本協定內容包括協定正文及所有博軟已經發佈的或將來可能發佈的博軟服務的使用規則。所有規則為本協定不可分割的一部分，與協議正文具有相同法律效力。您認可並同意若本服務協定中的某一部分條款或描述被相關司法機關判定為無效，該判定無效並不影響其他部分的有效性，您仍需依照本協定中的其他部分條款履行相關義務同時行使相關權利。若您在本協定內容或相關附屬規則發生修訂後，繼續使用信用卡自動還款服務的，則視為您同意最新修訂的協定內容；否則您須立即停止使用本服務。
十二、本協議未約定事宜，均以博軟網站所不時公佈的《掌泊寶服務協定》及相關附屬規則為補充；本協定與《掌泊寶服務協定》及相關附屬規則不一致的地方，以本協議為准。
</string>

    <!--AIzaSyCphFFTlfQyajGEeEL72K0l50mVJyGc77g-->
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        <!--AIzaSyCphFFTlfQyajGEeEL72K0l50mVJyGc77g-->
        AIzaSyBlPIwqyBxcArm9zudxctVzle5DMb48rn0
    </string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>
</resources>
